--- a/src/pages/Labs/Laiga/ReservationForm/LaigaReservation.module.css
+++ b/src/pages/Labs/Laiga/ReservationForm/LaigaReservation.module.css
@@ -12,7 +12,6 @@
   padding: 20px;
   padding-top: 140px;
   position: relative;
-  z-index: 1;
 }
 
 .title {
